// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Grid snapshot renders 1`] = `
<r
  className="className"
  height={400}
  stroke="#8E88EA"
  width={400}
  xOffset={NaN}
  xScale={
    Object {
      "bandwidth": [Function],
    }
  }
  yScale={[MockFunction]}
/>
`;

exports[`Grid snapshot renders if graphProps is not defined 1`] = `
<r
  className="className"
  stroke="#8E88EA"
  xOffset={NaN}
  xScale={
    Object {
      "bandwidth": [Function],
    }
  }
/>
`;
